# Skills

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SPA项目评估大盘需求规格说明书.md  codex_test.txt  extract_e2e_instructions.py  extract_sections.py  fix_recs.py  fix_recs_count.py  fix_recs_final.py  fix_recs_validator.py  fix_reports.py  fix_skills.py  fix_todos.py  project-definition.skill  pyproject.toml  question.md  read_val.py  revert.py  review-visualization.html  skills.index.json  skills_capability_assessment.md  update_reports.py  多智能体编程框架Agent解析.md  所有测试.md  评审.md  软件知识产权保护指南.md
.ai-code-index/: README.md  reindex.sh  search.sh  struct-search.sh  symbols.sh
Arc/: README.md
agent/: CLAUDE.md  SKILL.md
arc:aigc/: SKILL.md
arc:audit/: CLAUDE.md  SKILL.md
arc:build/: CLAUDE.md  SKILL.md
arc:cartography/: CLAUDE.md  README.md  SKILL.md
arc:clarify/: CLAUDE.md  SKILL.md
arc:context/: SKILL.md
arc:decide/: CLAUDE.md  SKILL.md
arc:e2e/: CLAUDE.md  SKILL.md  evals.json
arc:estimate/: SKILL.md
arc:exec/: CLAUDE.md  SKILL.md
arc:fix/: CLAUDE.md  SKILL.md
arc:gate/: SKILL.md
arc:init/: CLAUDE.md  SKILL.md
arc:init:full/: SKILL.md
arc:init:update/: SKILL.md
arc:ip-check/: CLAUDE.md  SKILL.md
arc:ip-draft/: CLAUDE.md  SKILL.md
arc:model/: SKILL.md
arc:release/: SKILL.md
arc:retest/: CLAUDE.md  SKILL.md
arc:test/: SKILL.md  evals.json
arc:uml/: SKILL.md
arcgocore/: go.mod  launcher.sh
cartography/: CLAUDE.md  README.md  SKILL.md
code-comment-conventions/: SKILL.md
contract-first-api/: SKILL.md
deliberate/: CLAUDE.md  SKILL.md
doc-syncer/: SKILL.md
docs/: arc-routing-cheatsheet.md  arc-routing-matrix.md  code-rot-taxonomy.md  conductor-pattern.md  fusion-guide.md  orchestration-contract.md  superpowers-fusion-guide.md
estimate/: SKILL.md
estimation-risk/: SKILL.md
flaky-test-doctor/: SKILL.md
frontend-stack-baseline/: SKILL.md
gate/: CLAUDE.md  SKILL.md
go-gin-ssr-fmt-tracing/: SKILL.md
graduation-doc-support/: SKILL.md
implement/: CLAUDE.md  SKILL.md
incident-triage/: SKILL.md
init/: CLAUDE.md  SKILL.md
init-full/: SKILL.md
init-update/: SKILL.md
ip-audit/: CLAUDE.md  SKILL.md
ip-docs/: CLAUDE.md  SKILL.md
loop/: CLAUDE.md  SKILL.md
migration-safety/: SKILL.md
perf-regression-guard/: SKILL.md
pr-review-assistant/: SKILL.md
project-architecture-conventions/: SKILL.md
project-definition/: SKILL.md
(+437 files in other folders)
